--- a/_config.yml
+++ b/_config.yml
@@ -80,10 +80,10 @@ theme: Sakura
 deploy:
   type: git
   repo: 
-    github: git@github.com:NLCC-REMOTE/NLCC-REMOTE.github.io.git
+    github: https://github.com/NLCC-REMOTE/NLCC-REMOTE.github.io.git
     #github: https://github.com/honjun/honjun.github.io.git
     #coding: https://git.coding.net/hojun/hojun.git,backup
-  branch: main
+  branch: hexo
 
 # backup
 backup:
